k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: batik-api
  labels:
    name: batik-api
    environment: production
